# Messanger

./: .gitignore  CMakeLists.txt  README.md
server/: CMakeLists.txt
server/src/: server.cpp  server.h
src/: client.cpp  client.h  main.cpp  main_window.cpp  main_window.h  messanger.cpp  messanger.h  style.h
